--- a/iframe.html
+++ b/iframe.html
@@ -2,8 +2,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <head><title>video player</title></head>
 <body>
-	<iframe src="https://live.bilibili.com"></iframe>
-	<iframe src="https://courses.helloenglish.com/ByjusPanel/studentPanel.html?&email=78934190&sessionId=neo_2491544&name=Super%20User&timerOn=true&origin=neo" width=800 height=600></iframe>
+	<iframe src="https://live.bilibili.com" width=640 height=480></iframe>
+	<iframe src="https://courses.helloenglish.com/ByjusPanel/studentPanel.html?&email=78934190&sessionId=neo_2491544&name=Super%20User&timerOn=true&origin=neo" width=640 height=480></iframe>
 </body>
 </html>
 
