--- a/sdrtn.html
+++ b/sdrtn.html
@@ -325,7 +325,7 @@
       </p>
 
       <p>Agora SD-RTN</p>
-      <video id="localVideo" playsinline autoplay muted></video>
+      <video id="localVideo" style="margin:0 0 20px 0" playsinline autoplay muted></video>
       <video id="remoteVideo" playsinline autoplay></video>
 
       <p>Public Network</p>
