--- a/agorap2p.html
+++ b/agorap2p.html
@@ -328,11 +328,15 @@
       <video id="remoteVideo" playsinline autoplay></video>
 
       <div class="box">
-        <span>Your phone number is <b id="no"></b> or you may call a number &nbsp;</span><input type="text" id="room" name="room">
+        <span id="desc">Your phone number is <b id="no"></b> or you call a number &nbsp;</span>
+        <input type="text" id="room" name="room">
         <p></p>
         <button id="callButton">Call</button>
         <button id="hangupButton">Hang Up</button>
       </div>
+
+      <div id="vstats"></div>
+      <div id="astats"></div>
 
     </div>
   </body>
