--- a/agorap2p.html
+++ b/agorap2p.html
@@ -328,7 +328,7 @@
       <video id="remoteVideo" playsinline autoplay></video>
 
       <div class="box">
-        <span id="desc">Your phone number is <b id="no"></b> or you call a number &nbsp;</span>
+        <span id="desc">Your phone number is <b id="no"></b> or call a number &nbsp;</span>
         <input type="text" id="room" name="room">
         <p></p>
         <button id="callButton">Call</button>
