--- a/agorap2p.html
+++ b/agorap2p.html
@@ -336,10 +336,10 @@
       <p><b>remote video</b></p>
       <table border="0" style="width:100%">
         <tr>
-          <td style="text-align:left;width:50%;font-size:12px;">
+          <td style="text-align:left;width:50%;">
             P2P over internet <br>
           </td>
-          <td style="text-align:left;width:50%;font-size:12px;">
+          <td style="text-align:left;width:50%;">
             SD-RTN <br>
           </td>
         </tr>
@@ -349,6 +349,14 @@
           </td>
           <td>
             <video id="remoteVideo2" style="width:90%" playsinline autoplay></video>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div id="remoteVideoStats"></div>
+          </td>
+          <td>
+            <div id="remoteVideo2Stats"></div>
           </td>
         </tr>
       </table>
