--- a/agorap2p.html
+++ b/agorap2p.html
@@ -371,6 +371,11 @@
 
     </div>
   </body>
+  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+  <script>
+    // VConsole will be exported to `window.VConsole` by default.
+    var vConsole = new window.VConsole();
+  </script>
   <script src="AgoraRTC_N-p2p.js"></script>
   <script src="agorap2p.js"></script>
 </html>
