--- a/sdk.html
+++ b/sdk.html
@@ -381,6 +381,7 @@
             <canvas id="chart_out_fps"></canvas>
             <canvas id="chart_out_nack"></canvas>
             <canvas id="chart_out_kbps"></canvas>
+            <canvas id="chart_out_bwe"></canvas>
           </td>
         </tr>
       </table>
