--- a/test_whip.html
+++ b/test_whip.html
@@ -9,7 +9,7 @@
    <button onclick="javascript:play();">play</button>
    <div id="video-box" style="width:640px;height:480px;background-color:#ccc"></div>
  </body>
- <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.22.1-300.js"></script>
+ <script src="./4.23.0.js"></script>
  <script>
    AgoraRTC.setParameter("EXPERIMENTS", {"enableH264NaluFilter":true});
    AgoraRTC.setParameter("SYNC_GROUP", false);
