--- a/test_whip.html
+++ b/test_whip.html
@@ -11,7 +11,7 @@
  </body>
  <script src="./4.23.0.js"></script>
  <script>
-   AgoraRTC.setParameter("EXPERIMENTS", {"enableH264NaluFilter":true});
+   // AgoraRTC.setParameter("EXPERIMENTS", {"enableH264NaluFilter":true});
    AgoraRTC.setParameter("SYNC_GROUP", false);
 
    async function play() {
