--- a/test_whip.html
+++ b/test_whip.html
@@ -12,7 +12,7 @@
  <script src="./4.23.0.js"></script>
  <script>
    // AgoraRTC.setParameter("EXPERIMENTS", {"enableH264NaluFilter":true});
-   AgoraRTC.setParameter("GATEWAY_ADDRESS", [{ip:"114.236.138.120", port:9870},]);
+   AgoraRTC.setParameter("GATEWAY_ADDRESS", [{ip:"114.236.138.120", port:9870}]);
    AgoraRTC.setParameter("SYNC_GROUP", false);
    AgoraRTC.setParameter("ENABLE_PRELOAD", false);
    AgoraRTC.setParameter("AP_AREA", false);
