--- a/test_turn.html
+++ b/test_turn.html
@@ -383,7 +383,7 @@
       <a href="https://github.com/webrtc/samples/tree/gh-pages/src/content/peerconnection/pc1"
          title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
 
-      <h3>Log output</h3>
+      <h3>&nbsp</h3>
       <div id="logOutput">
       </div>
 
