--- a/test_turn.html
+++ b/test_turn.html
@@ -489,8 +489,8 @@
                 console.log(`Using audio device: ${audioTracks[0].label}`);
             }
 
-            const turnUser = 'test';
-            const turnCred = '111111';
+            const turnUser = 'test0107';
+            const turnCred = 'aosdifhnwoefnwenf';
             let configSet = {
                 "SaudiArabia": {
                     "TLS443COM": [{ urls: 'turns:158-101-248-79.edge.sd-rtn.com:443?transport=tcp', credential: turnCred, username: turnUser }],
